# vgg_runtime

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AUTHORS.txt  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-1.0  LICENSE-latest  README.md  build.nix  default.nix  serve_wasm.py  shell.nix
lib/: CMakeLists.txt
lib/argparse/: argparse.hpp
lib/miniz-cpp/: CMakeLists.txt  zip_file.hpp
lib/nlohmann/: json.hpp
lib/quickjs/: .gitignore  CMakeLists.txt
lib/skia/: CMakeLists.txt
lib/skia_old/: CMakeLists.txt
src/: CMakeLists.txt  runtime.cpp
src/Adapter/: CMakeLists.txt
src/Api/: VggEnv.hpp
src/Application/: Animate.cpp  AppLayoutContext.cpp  AppLayoutContext.hpp  AppRender.cpp  Async.hpp  AttrBridge.cpp  CMakeLists.txt  Controller.cpp  Editor.cpp  Editor.hpp  ElementAddPropertySerializer.hpp  ElementDeletePropertySerializer.hpp  ElementGetPropertySerializer.cpp  ElementGetPropertySerializer.hpp  ElementUpdatePropertySerializer.hpp  Environment.cpp  EventAPI.cpp  MainComposer.cpp  Pager.cpp  Pager.hpp  Presenter.cpp  Presenter.hpp  Reporter.cpp  Reporter.hpp  RunLoop.cpp  Types.hpp  UIApplication.cpp  UIGestureRecognizer.cpp  UIGestureRecognizer.hpp  UIPanGestureRecognizer.cpp  UIPanGestureRecognizer.hpp  UIScrollView.cpp  UIScrollView.hpp  UIScrollViewAnimation.cpp  UIScrollViewAnimation.hpp  UIScrollViewAnimationDeceleration.cpp  UIScrollViewAnimationDeceleration.hpp  UIUpdateElementSerializer.hpp  UIView.cpp  UIViewImpl.cpp  (+6 more)
src/Basic/: ArtboardNode.hpp  AttrSerde.h  Attrs.h  CMakeLists.txt  ContourNode.cpp  ContourNode.h  Geometry.hpp  GroupNode.h  IReader.hpp  ImageNode.cpp  ImageNode.h  Loader.hpp  Mask.h  Node.cpp  Node.hpp  PaintNode.cpp  PaintNode.h  PathNode.cpp  PathNode.h  PathNodePrivate.cpp  PathNodePrivate.h  RawFileReader.h  RenderState.h  RenderTreeDef.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  ShaderFactory.cpp  SketchFileReader.h  SkiaConverter.h  SymbolNode.h  TextNode.cpp  TextNode.h  VGGType.h  VGGUtils.h
src/Components/: Frame.hpp  Interaction.hpp  Null.hpp  Path.hpp  Relation.hpp  SoureCode.hpp  Styles.hpp  Text.hpp
src/Controller/: Controller.cpp  Controller.hpp
src/Domain/: CMakeLists.txt
src/Editor/: Editor.hpp
src/Entity/: ComponentSet.hpp  Entity.hpp  EntityDefs.hpp  EntityManager.cpp  EntityManager.hpp  InputManager.hpp  KeyboardEntity.hpp  MouseEntity.hpp
src/Entry/: CMakeLists.txt
src/Exec/: IVggEnv.hpp  VggEnv.hpp  VggExec.cpp  VggExec.hpp  VggJSEngine.hpp
src/Infrastructure/: VggDepContainer.hpp
src/Layer/: AllocatorImpl.cpp  AttrSerde.h  AttrSerde.hpp  AttributeAccessor.cpp  AttributeAccessor.hpp  AttributeGraph.cpp  AttributeGraph.hpp  AttributeNode.cpp  AttributeNode.hpp  BlenderImpl.hpp  CMakeLists.txt  Config.cpp  CoordinateConvert.hpp  DebugCanvas.cpp  DebugCanvas.h  DebugCanvas.hpp  DefaultRenderNode.cpp  DefaultRenderNode.hpp  DevCanvas.hpp  DisplayList.hpp  DocBuilder.cpp  DocBuilder.hpp  DocConcept.hpp  EffectAttribute.cpp  EffectAttribute.hpp  EffectNode.cpp  Effects.cpp  Effects.hpp  Ellipse.hpp  EmptyRaster.cpp  EventManager.cpp  Executor.hpp  Exporter.cpp  FillEffects.hpp  FiraSans.hpp  FontManager.cpp  Frame.cpp  FrameNode.cpp  GL.cpp  GlobalSettings.cpp  (+149 more)
src/Main/: Main.hpp  MainComposer.hpp  PlatformComposer.hpp
src/Model/: AutomergeDocumentStore.hpp  Config.hpp  DesignDocumentModel.hpp  DocumentModel.cpp  DocumentModel.hpp  DocumentStore.hpp  JsonDocument.cpp  JsonDocument.hpp  JsonDocumentStore.hpp  JsonSchemaValidator.cpp  JsonSchemaValidator.hpp  ModelEvent.hpp  RawJsonDocument.hpp  SchemaValidJsonDocument.cpp  SchemaValidJsonDocument.hpp  SubjectJsonDocument.cpp  SubjectJsonDocument.hpp  UndoRedoJsonDocument.hpp  VggWork.cpp  VggWork.hpp  Visitor.hpp
src/Presenter/: Event.hpp  EventVisitor.hpp  Presenter.hpp  UIEvent.hpp  ViewEvent.hpp
src/Sdk/: VggSdk.cpp  VggSdk.hpp
src/Systems/: GeometrySystem.cpp  GeometrySystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/UseCase/: CMakeLists.txt  InstanceState.cpp  ModelChanged.cpp  ResizeWindow.cpp  StartRunning.cpp
src/Usecase/: CMakeLists.txt  EditModel.hpp  ModelChanged.cpp  ResizeWindow.cpp  SaveModel.hpp
src/Utility/: CMakeLists.txt  ConfigMananger.cpp  JavaScriptInterpreter.hpp  SketchImporter.hpp  VggFloat.cpp  VggString.cpp  VggTimer.cpp
src/Utils/: App.hpp  Async.hpp  DIContainer.hpp  DPI.hpp  EntityContainer.cpp  EntityContainer.hpp  FileManager.hpp  FileUtils.hpp  FillTypeChooser.hpp  JavaScriptInterpreter.hpp  Math.hpp  Profiler.hpp  RadiusCoeff.hpp  Scheduler.hpp  SketchImporter.hpp  TextCodecs.hpp  TextureManager.hpp  TripleInfo.hpp  TypefaceManager.hpp  Types.hpp  Utils.hpp  Version.hpp  WasmBindings.cpp
src/View/: UIView.cpp  UIView.hpp
test/: CMakeLists.txt  test_config.hpp
test/Animation/: SymbolInstanceAnimationTest.cpp  SymbolInstanceTest.cpp
test/Utility/: TimerTests.cpp
test/browser/: offscreen-canvas.html  test-daruma.html  test-work.html  test.html
test/component/: MockSkiaGraphicsContext.hpp  component_tests.cpp
test/container/: MockSkiaGraphicsContext.cpp  MockSkiaGraphicsContext.hpp  SdkTests.cpp  container_tests.cpp
test/controller/: controller_test.cpp
test/domain/: layout_tests.cpp
test/editor/: save_test.cpp
test/exec/: vgg_exec_test.cpp
test/infrastructure/: async_test.cpp
test/layer/: observe_test.cpp  refcounter_test.cpp  treenode_test.cpp
test/mocks/: MockDocumentModel.hpp  MockJsonDocumentObserver.hpp  MockJsonSchemaValidator.hpp  MockPresenter.hpp  VggEnvMock.hpp  VggJSEngineMock.hpp  VggSdkMock.hpp
test/model/: automerge_test.cpp  design_document_model_test.cpp  document_model_test.cpp  json_schema_validator_test.cpp  schema_valid_json_document_test.cpp  treenode_test.cpp  vgg_model_test.cpp  vgg_work_test.cpp
test/native/: native_exec_test.cpp  native_sdk_test.cpp  node_test.cpp  node_test_helper.cpp
test/render/: CMakeLists.txt  TestEventListener.h  TestEventListener.hpp  exporter.cpp  fb_viewer.cpp  imgui_integration.hpp  imguipanel.hpp  loader.h  loader.hpp  loop.hpp  misc.cpp  newappmain.cpp  offline_render.cpp  reader.hpp  (+4 more)
(+815 files in other folders)
